# automatic-chord-recognition

./: .gitignore  README.md  ea_testing.py  environment.yml  pyproject.toml
checkpoints/: context_mlp.pt
notebooks/: aam_audio_playground.ipynb  aam_loader_playground.ipynb  chord_recognition.ipynb
src/: test.py
src/data/: __init__.py  load_data.py
src/features/: __init__.py  chroma.py  preprocessing.py  vocab.py
src/models/: mlp.py
src/training/: metrics.py  trainer.py
src/utils/: visualization.py
